rds.tf
resource "aws_db_instance" "rds-create" {
  allocated_storage    = 10
  engine               = "mysql"
  engine_version       = "5.7"
  instance_class       = "db.t3.micro"
  name                 = "Rdsjava"
  username             = "anand"
  password             = "anand997758"
  parameter_group_name = "default.mysql5.7"
  skip_final_snapshot  = true
}
